
This file shows the changes in recent releases of MODX. The most current release is usually the
development release, and is only shown to give an idea of what's currently in the pipeline.

- [#5453] Add ability to disable forgot password on manager login screen
- Add batch remove to Namespaces grid
- [#5671] Add :toPlaceholder, :cssToHead, :htmlToHead, :htmlToBottom, :jsToHead, :jsToBottom output filters
- Add delete user button to user editing page toolbar
- [#5542] Add ability to drag/drop files and folders in the Files tab
- [#5665] Remove console.log debug references in JS
- Add Media Sources, which allow abstraction of file management in MODX
- [#2737] Centralize logic for changing Context of modResource Children
- [#5068] Move token check for new resources below error validation in processor to prevent bogus duplicate resource issue
- [#4945] Remove weblink content maxlength restriction
- [#5270] Enable container drag 'n drop in Extended Fields tree
- [#4790] Add support for comment tag token, e.g. [[- comments here]]
- [#5539] Add back in compress_css/js for allowing toggling of js/css compression in manager
- [#5556] Enable connection pooling with master/slave support
- [#5499] Ensure modFile create returns boolean
- [#5501] Add sanity checks on FC rules renameTab and hideField
- [#5505] Fix issue with dropdowns in Fx5
- Enable modTag elements to accept property sets
- Enable modElement->getPropertySet() to merge @propertyset in name with property set specified in setName parameter
- Allow modParser->getElement() method to accept @propertySet in name parameter
- Prevent modParser->parsePropertyString() from trimming all backticks at beginning and end of string
- Improve parser efficiency by returning results of nested tags if elementOutput is null|false
- [#5392] Fix bug where policy template descriptions were not translated
- [#5377] Fix modParser->isProcessingTag() bug preventing filtering on placeholder tags